--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <!--Angular-->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+<!--ngStorage-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.5/ngStorage.min.js"></script>
+<!--Aditional CSS-->
+<link rel="stylesheet" href="css/index.css">
 </head>
 
-<body ng-app="toDo" ng-controller="toDoCont">
+<body id="body" ng-app="toDo" ng-controller="toDoCont">
 <div id="outside" class="container-fluid">
 	<div class="jumbotron">
 		<h2>Russ's ToDo</h2>
         <p>Work in progress. Created with jQuery, AngularJS, and Bootstrap.</p>
+        <p>You have visited this page {{$storage.pageCounter}} times.</p>
 	</div>
     <div class="row">
     	<!-- ToDo's -->
@@ -62,13 +67,26 @@
             </div>
         </div>
     </div>
+    <div id="saveButton">
+    	<button class="btn btn-info btn-lg" ng-click="save()">Save</button>
+    </div>
 </div>
-<script>// Check for the various File API support.
-if (window.File && window.FileReader && window.FileList && window.Blob) {
-  // Great success! All the File APIs are supported.
-} else {
-  alert('The File APIs are not fully supported in this browser.');
-}</script>
+<script>// Increment page counter and move 'save' button.
+$(document).ready(function() {
+	angular.element("#body").scope().updatePageCount();
+	angular.element("#body").scope().$apply();
+	
+	$("#saveButton").css("position", "fixed");
+	function resizePage(){
+		var sHeight = $(window).height();
+		var sWidth = $(window).width();
+		$("#saveButton").css("left", (sWidth - 100));
+		$("#saveButton").css("top", (sHeight - 75));
+	}
+	resizePage();
+	$(window).resize(resizePage);
+});
+</script>
 <script src="js/controllers/toDoController.js"></script>
 <style>
 </style>
